src/styles/_page-layout.scss
.container {
    @include for-phone-only {
        width: 100%;
    }
    @include for-tablet-only {
        width: 600px;
    }
    @include for-desktop-only {
        width: 900px;
    }
    padding-left: 10px;
    padding-right: 10px;
    margin: auto;
}

#content {
    margin-top: 10px;
    @include for-phone-only {
        width: 100%;
    }
    @include for-tablet-up {
        width: 580px;
    }
    @include for-desktop-only {
        float: left;
        padding-right: 5px;
    }
}

#right-column {
    margin-top: 10px;
    display: none;
    @include for-desktop-only {
        display: inline;
        float: right;
        width: 280px;
        padding-left: 5px;
    }
}

